// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<AdminWrapper>
  <ForwardRef(Stack)
    spacing={3}
  >
    <BackToNavi
      link="/admin/account"
      text="アカウント設定"
    />
    <ForwardRef(Box)>
      <ForwardRef(Stack)
        spacing={1}
        sx={
          Object {
            "maxWidth": "400px",
            "mx": "auto",
            "px": 1,
          }
        }
      >
        <ForwardRef(Typography)
          align="center"
          component="h2"
          variant="h5"
        >
          プロフィール変更
        </ForwardRef(Typography)>
        <ForwardRef(Box)>
          <ImageField
            cropable={true}
            disabled={false}
            error={false}
            maxLength={200}
            onCatchError={[Function]}
            onChange={[Function]}
            src="https://..."
            variant="icon"
          />
        </ForwardRef(Box)>
        <ForwardRef(Box)
          sx={
            Object {
              "pl": 1.5,
            }
          }
        >
          <ForwardRef(Typography)
            color="gray"
            fontSize={12}
            sx={
              Object {
                "pb": 0.5,
              }
            }
          >
            メールアドレス（非公開）
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            fontSize={18}
          >
            xxx@example.com
          </ForwardRef(Typography)>
        </ForwardRef(Box)>
        <ForwardRef(Box)
          component="form"
          noValidate={true}
        >
          <ForwardRef(TextField)
            disabled={false}
            error={false}
            fullWidth={true}
            id="nickname"
            inputProps={
              Object {
                "maxLength": 20,
              }
            }
            label="名前"
            margin="normal"
            name="nickname"
            onChange={[Function]}
            required={true}
            type="nickname"
            value="Axel"
          />
          <ForwardRef(TextField)
            disabled={false}
            error={false}
            fullWidth={true}
            id="url"
            label="Webサイト"
            margin="normal"
            name="url"
            onChange={[Function]}
            type="url"
            value="https://..."
          />
          <ForwardRef(LoadingButton)
            disabled={false}
            fullWidth={true}
            loading={false}
            onClick={[Function]}
            sx={
              Object {
                "mb": 2,
                "mt": 3,
              }
            }
            variant="contained"
          >
            更新
          </ForwardRef(LoadingButton)>
        </ForwardRef(Box)>
        <ForwardRef(Typography)
          align="right"
        >
          <Link
            to="/users/1"
          >
            プロフィール
          </Link>
        </ForwardRef(Typography)>
      </ForwardRef(Stack)>
    </ForwardRef(Box)>
  </ForwardRef(Stack)>
</AdminWrapper>
`;

exports[`Shallow Snapshot Tests error case 1`] = `
<AdminWrapper>
  <ForwardRef(Stack)
    spacing={3}
  >
    <BackToNavi
      link="/admin/account"
      text="アカウント設定"
    />
    <ForwardRef(Box)>
      <ForwardRef(Stack)
        spacing={1}
        sx={
          Object {
            "maxWidth": "400px",
            "mx": "auto",
            "px": 1,
          }
        }
      >
        <ForwardRef(Typography)
          align="center"
          component="h2"
          variant="h5"
        >
          プロフィール変更
        </ForwardRef(Typography)>
        <HeaderErrorMessages
          errorMessages={
            Array [
              "error1",
              "error2",
            ]
          }
          errorTitle="error title"
        />
        <ForwardRef(Box)>
          <ImageField
            cropable={true}
            disabled={false}
            error={false}
            maxLength={200}
            onCatchError={[Function]}
            onChange={[Function]}
            src="https://..."
            variant="icon"
          />
        </ForwardRef(Box)>
        <ForwardRef(Box)
          sx={
            Object {
              "pl": 1.5,
            }
          }
        >
          <ForwardRef(Typography)
            color="gray"
            fontSize={12}
            sx={
              Object {
                "pb": 0.5,
              }
            }
          >
            メールアドレス（非公開）
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            fontSize={18}
          >
            xxx@example.com
          </ForwardRef(Typography)>
        </ForwardRef(Box)>
        <ForwardRef(Box)
          component="form"
          noValidate={true}
        >
          <ForwardRef(TextField)
            disabled={false}
            error={true}
            fullWidth={true}
            helperText={
              Array [
                "nickname is invalid",
              ]
            }
            id="nickname"
            inputProps={
              Object {
                "maxLength": 20,
              }
            }
            label="名前"
            margin="normal"
            name="nickname"
            onChange={[Function]}
            required={true}
            type="nickname"
            value="Axel"
          />
          <ForwardRef(TextField)
            disabled={false}
            error={false}
            fullWidth={true}
            id="url"
            label="Webサイト"
            margin="normal"
            name="url"
            onChange={[Function]}
            type="url"
            value="https://..."
          />
          <ForwardRef(LoadingButton)
            disabled={false}
            fullWidth={true}
            loading={false}
            onClick={[Function]}
            sx={
              Object {
                "mb": 2,
                "mt": 3,
              }
            }
            variant="contained"
          >
            更新
          </ForwardRef(LoadingButton)>
        </ForwardRef(Box)>
        <ForwardRef(Typography)
          align="right"
        >
          <Link
            to="/users/1"
          >
            プロフィール
          </Link>
        </ForwardRef(Typography)>
      </ForwardRef(Stack)>
    </ForwardRef(Box)>
  </ForwardRef(Stack)>
</AdminWrapper>
`;

exports[`Shallow Snapshot Tests loading 1`] = `
<AdminWrapper>
  <ForwardRef(Stack)
    spacing={3}
  >
    <BackToNavi
      link="/admin/account"
      text="アカウント設定"
    />
    <ForwardRef(Box)>
      <ForwardRef(Stack)
        spacing={1}
        sx={
          Object {
            "maxWidth": "400px",
            "mx": "auto",
            "px": 1,
          }
        }
      >
        <ForwardRef(Typography)
          align="center"
          component="h2"
          variant="h5"
        >
          プロフィール変更
        </ForwardRef(Typography)>
        <ForwardRef(Box)>
          <ImageField
            cropable={true}
            disabled={true}
            error={false}
            maxLength={200}
            onCatchError={[Function]}
            onChange={[Function]}
            src="https://..."
            variant="icon"
          />
        </ForwardRef(Box)>
        <ForwardRef(Box)
          sx={
            Object {
              "pl": 1.5,
            }
          }
        >
          <ForwardRef(Typography)
            color="gray"
            fontSize={12}
            sx={
              Object {
                "pb": 0.5,
              }
            }
          >
            メールアドレス（非公開）
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            fontSize={18}
          >
            xxx@example.com
          </ForwardRef(Typography)>
        </ForwardRef(Box)>
        <ForwardRef(Box)
          component="form"
          noValidate={true}
        >
          <ForwardRef(TextField)
            disabled={true}
            error={false}
            fullWidth={true}
            id="nickname"
            inputProps={
              Object {
                "maxLength": 20,
              }
            }
            label="名前"
            margin="normal"
            name="nickname"
            onChange={[Function]}
            required={true}
            type="nickname"
            value="Axel"
          />
          <ForwardRef(TextField)
            disabled={true}
            error={false}
            fullWidth={true}
            id="url"
            label="Webサイト"
            margin="normal"
            name="url"
            onChange={[Function]}
            type="url"
            value="https://..."
          />
          <ForwardRef(LoadingButton)
            disabled={true}
            fullWidth={true}
            loading={true}
            onClick={[Function]}
            sx={
              Object {
                "mb": 2,
                "mt": 3,
              }
            }
            variant="contained"
          >
            更新
          </ForwardRef(LoadingButton)>
        </ForwardRef(Box)>
        <ForwardRef(Typography)
          align="right"
        >
          <Link
            to="/users/1"
          >
            プロフィール
          </Link>
        </ForwardRef(Typography)>
      </ForwardRef(Stack)>
    </ForwardRef(Box)>
  </ForwardRef(Stack)>
</AdminWrapper>
`;

exports[`Shallow Snapshot Tests social account 1`] = `
<AdminWrapper>
  <ForwardRef(Stack)
    spacing={3}
  >
    <BackToNavi
      link="/admin/account"
      text="アカウント設定"
    />
    <ForwardRef(Box)>
      <ForwardRef(Stack)
        spacing={1}
        sx={
          Object {
            "maxWidth": "400px",
            "mx": "auto",
            "px": 1,
          }
        }
      >
        <ForwardRef(Typography)
          align="center"
          component="h2"
          variant="h5"
        >
          プロフィール変更
        </ForwardRef(Typography)>
        <ForwardRef(Alert)
          severity="info"
        >
          ソーシャルアカウントを連携している場合、このページからプロフィール情報を変更することはできません。表示されている情報が古い場合は、一度ログアウト後再びログインしてください。
        </ForwardRef(Alert)>
        <ForwardRef(Box)>
          <ImageField
            cropable={true}
            disabled={true}
            error={false}
            maxLength={200}
            onCatchError={[Function]}
            onChange={[Function]}
            variant="icon"
          />
        </ForwardRef(Box)>
        <ForwardRef(Box)
          component="form"
          noValidate={true}
        >
          <ForwardRef(TextField)
            disabled={true}
            error={false}
            fullWidth={true}
            id="nickname"
            inputProps={
              Object {
                "maxLength": 20,
              }
            }
            label="名前"
            margin="normal"
            name="nickname"
            onChange={[Function]}
            required={true}
            type="nickname"
            value="Axel"
          />
          <ForwardRef(TextField)
            disabled={true}
            error={false}
            fullWidth={true}
            id="url"
            label="Webサイト"
            margin="normal"
            name="url"
            onChange={[Function]}
            type="url"
            value=""
          />
          <ForwardRef(LoadingButton)
            disabled={true}
            fullWidth={true}
            loading={false}
            onClick={[Function]}
            sx={
              Object {
                "mb": 2,
                "mt": 3,
              }
            }
            variant="contained"
          >
            更新
          </ForwardRef(LoadingButton)>
        </ForwardRef(Box)>
        <ForwardRef(Typography)
          align="right"
        >
          <Link
            to="/users/1"
          >
            プロフィール
          </Link>
        </ForwardRef(Typography)>
      </ForwardRef(Stack)>
    </ForwardRef(Box)>
  </ForwardRef(Stack)>
</AdminWrapper>
`;

exports[`Shallow Snapshot Tests success 1`] = `
<AdminWrapper>
  <ForwardRef(Stack)
    spacing={3}
  >
    <BackToNavi
      link="/admin/account"
      text="アカウント設定"
    />
    <ForwardRef(Box)>
      <ForwardRef(Stack)
        spacing={1}
        sx={
          Object {
            "maxWidth": "400px",
            "mx": "auto",
            "px": 1,
          }
        }
      >
        <ForwardRef(Typography)
          align="center"
          component="h2"
          variant="h5"
        >
          プロフィール変更
        </ForwardRef(Typography)>
        <ForwardRef(Alert)>
          ユーザー情報を変更しました。
        </ForwardRef(Alert)>
        <ForwardRef(Box)>
          <ImageField
            cropable={true}
            disabled={false}
            error={false}
            maxLength={200}
            onCatchError={[Function]}
            onChange={[Function]}
            src="https://..."
            variant="icon"
          />
        </ForwardRef(Box)>
        <ForwardRef(Box)
          sx={
            Object {
              "pl": 1.5,
            }
          }
        >
          <ForwardRef(Typography)
            color="gray"
            fontSize={12}
            sx={
              Object {
                "pb": 0.5,
              }
            }
          >
            メールアドレス（非公開）
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            fontSize={18}
          >
            xxx@example.com
          </ForwardRef(Typography)>
        </ForwardRef(Box)>
        <ForwardRef(Box)
          component="form"
          noValidate={true}
        >
          <ForwardRef(TextField)
            disabled={false}
            error={false}
            fullWidth={true}
            id="nickname"
            inputProps={
              Object {
                "maxLength": 20,
              }
            }
            label="名前"
            margin="normal"
            name="nickname"
            onChange={[Function]}
            required={true}
            type="nickname"
            value="Axel"
          />
          <ForwardRef(TextField)
            disabled={false}
            error={false}
            fullWidth={true}
            id="url"
            label="Webサイト"
            margin="normal"
            name="url"
            onChange={[Function]}
            type="url"
            value="https://..."
          />
          <ForwardRef(LoadingButton)
            disabled={false}
            fullWidth={true}
            loading={false}
            onClick={[Function]}
            sx={
              Object {
                "mb": 2,
                "mt": 3,
              }
            }
            variant="contained"
          >
            更新
          </ForwardRef(LoadingButton)>
        </ForwardRef(Box)>
        <ForwardRef(Typography)
          align="right"
        >
          <Link
            to="/users/1"
          >
            プロフィール
          </Link>
        </ForwardRef(Typography)>
      </ForwardRef(Stack)>
    </ForwardRef(Box)>
  </ForwardRef(Stack)>
</AdminWrapper>
`;

exports[`Shallow Snapshot Tests with icon as file 1`] = `
<AdminWrapper>
  <ForwardRef(Stack)
    spacing={3}
  >
    <BackToNavi
      link="/admin/account"
      text="アカウント設定"
    />
    <ForwardRef(Box)>
      <ForwardRef(Stack)
        spacing={1}
        sx={
          Object {
            "maxWidth": "400px",
            "mx": "auto",
            "px": 1,
          }
        }
      >
        <ForwardRef(Typography)
          align="center"
          component="h2"
          variant="h5"
        >
          プロフィール変更
        </ForwardRef(Typography)>
        <ForwardRef(Box)>
          <ImageField
            cropable={true}
            disabled={false}
            error={false}
            maxLength={200}
            onCatchError={[Function]}
            onChange={[Function]}
            src="data-url"
            variant="icon"
          />
        </ForwardRef(Box)>
        <ForwardRef(Box)
          sx={
            Object {
              "pl": 1.5,
            }
          }
        >
          <ForwardRef(Typography)
            color="gray"
            fontSize={12}
            sx={
              Object {
                "pb": 0.5,
              }
            }
          >
            メールアドレス（非公開）
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            fontSize={18}
          >
            xxx@example.com
          </ForwardRef(Typography)>
        </ForwardRef(Box)>
        <ForwardRef(Box)
          component="form"
          noValidate={true}
        >
          <ForwardRef(TextField)
            disabled={false}
            error={false}
            fullWidth={true}
            id="nickname"
            inputProps={
              Object {
                "maxLength": 20,
              }
            }
            label="名前"
            margin="normal"
            name="nickname"
            onChange={[Function]}
            required={true}
            type="nickname"
            value="Axel"
          />
          <ForwardRef(TextField)
            disabled={false}
            error={false}
            fullWidth={true}
            id="url"
            label="Webサイト"
            margin="normal"
            name="url"
            onChange={[Function]}
            type="url"
            value="https://..."
          />
          <ForwardRef(LoadingButton)
            disabled={false}
            fullWidth={true}
            loading={false}
            onClick={[Function]}
            sx={
              Object {
                "mb": 2,
                "mt": 3,
              }
            }
            variant="contained"
          >
            更新
          </ForwardRef(LoadingButton)>
        </ForwardRef(Box)>
        <ForwardRef(Typography)
          align="right"
        >
          <Link
            to="/users/1"
          >
            プロフィール
          </Link>
        </ForwardRef(Typography)>
      </ForwardRef(Stack)>
    </ForwardRef(Box)>
  </ForwardRef(Stack)>
</AdminWrapper>
`;

exports[`Shallow Snapshot Tests with icon as null 1`] = `
<AdminWrapper>
  <ForwardRef(Stack)
    spacing={3}
  >
    <BackToNavi
      link="/admin/account"
      text="アカウント設定"
    />
    <ForwardRef(Box)>
      <ForwardRef(Stack)
        spacing={1}
        sx={
          Object {
            "maxWidth": "400px",
            "mx": "auto",
            "px": 1,
          }
        }
      >
        <ForwardRef(Typography)
          align="center"
          component="h2"
          variant="h5"
        >
          プロフィール変更
        </ForwardRef(Typography)>
        <ForwardRef(Box)>
          <ImageField
            cropable={true}
            disabled={false}
            error={false}
            maxLength={200}
            onCatchError={[Function]}
            onChange={[Function]}
            variant="icon"
          />
        </ForwardRef(Box)>
        <ForwardRef(Box)
          sx={
            Object {
              "pl": 1.5,
            }
          }
        >
          <ForwardRef(Typography)
            color="gray"
            fontSize={12}
            sx={
              Object {
                "pb": 0.5,
              }
            }
          >
            メールアドレス（非公開）
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            fontSize={18}
          >
            xxx@example.com
          </ForwardRef(Typography)>
        </ForwardRef(Box)>
        <ForwardRef(Box)
          component="form"
          noValidate={true}
        >
          <ForwardRef(TextField)
            disabled={false}
            error={false}
            fullWidth={true}
            id="nickname"
            inputProps={
              Object {
                "maxLength": 20,
              }
            }
            label="名前"
            margin="normal"
            name="nickname"
            onChange={[Function]}
            required={true}
            type="nickname"
            value="Axel"
          />
          <ForwardRef(TextField)
            disabled={false}
            error={false}
            fullWidth={true}
            id="url"
            label="Webサイト"
            margin="normal"
            name="url"
            onChange={[Function]}
            type="url"
            value="https://..."
          />
          <ForwardRef(LoadingButton)
            disabled={false}
            fullWidth={true}
            loading={false}
            onClick={[Function]}
            sx={
              Object {
                "mb": 2,
                "mt": 3,
              }
            }
            variant="contained"
          >
            更新
          </ForwardRef(LoadingButton)>
        </ForwardRef(Box)>
        <ForwardRef(Typography)
          align="right"
        >
          <Link
            to="/users/1"
          >
            プロフィール
          </Link>
        </ForwardRef(Typography)>
      </ForwardRef(Stack)>
    </ForwardRef(Box)>
  </ForwardRef(Stack)>
</AdminWrapper>
`;
